# hx-testing

./: .env.example  .gitignore  conftest.py  login.py  pyproject.toml  run_test.sh
config/: settings.py
pages/: policy_detail_page.py  policy_list_page.py
reference/: Upload_Output_v01_Everest.xlsx
reference/2024-v4/: Upload_Output - PASS.xlsx
reference/2025-v6/: AXIS UY2026 - Upload Template v8.0.xlsx
tests/: test_e2e_workflow.py
utils/: downloads.py  timing.py
